# UROP

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  Vagrantfile  alpha.c  auto-gen.py  autogen.py  diff-function.py  diff-function.sh  diff-function2.py  diff_function.py  extract.py  stats.py  view_ast.py
docs/: UROP Presentation.pptx
generator/: DFSProgramGenerator.cpp  Expression.cpp  Expression.h  ExpressionVariable.cpp  ExpressionVariable.h  Fact.h  FactMgr.h  KleeGenerator.h  README.md  Type.cpp  Type.h
include/: concrete.h  extra.h  symbolic.h  utils.h
lib/llvm-passes/: CMakeLists.txt  build_script.sh
lib/llvm-passes/functionrename/: .FunctionRename.cpp.swn  .FunctionRename.cpp.swo  CMakeLists.txt  FunctionRename.cpp  WeakFunctionDefs.cpp
lib/musl/: config.mak
lib/re2/: .gitignore  Makefile  build.sh
lib/re2-2017-06-01/: Makefile
lib/uclibc/: .config
lib/uclibc/extra/config/: conf
lib/uclibc/include/config/: auto.conf  auto.conf.cmd  autoconf.h
llvm-passes/: build_script.sh
llvm-passes/functionrename/: CMakeLists.txt  FunctionRename.cpp  Skeleton.cpp
re2-tests/bitcode-linked/: CEscape_test_driver.c  strutil_1.o.bc  strutil_2_renamed.o.bc  strutil_linked.o.bc
re2-tests/bitcode-re2/: bitstate.o.bc  compile.o.bc  dfa.o.bc  filtered_re2.o.bc  mimics_pcre.o.bc  nfa.o.bc  onepass.o.bc  parse.o.bc  perl_groups.o.bc  prefilter.o.bc  prefilter_tree.o.bc  prog.o.bc  re2.o.bc  regexp.o.bc  rune.o.bc  set.o.bc  simplify.o.bc  stringpiece.o.bc  tostring.o.bc  unicode_casefold.o.bc  unicode_groups.o.bc
re2-tests/bitcode-re2-2017-06-01/: bitstate.o.bc  compile.o.bc  dfa.o.bc  filtered_re2.o.bc  mimics_pcre.o.bc  nfa.o.bc  onepass.o.bc  parse.o.bc  perl_groups.o.bc  prefilter.o.bc  prefilter_tree.o.bc  prog.o.bc  re2.o.bc  regexp.o.bc  rune.o.bc  set.o.bc  simplify.o.bc  stringpiece.o.bc  strutil.o.bc  tostring.o.bc  unicode_casefold.o.bc  unicode_groups.o.bc
re2-tests/llvm-pass/: CMakeLists.txt
re2-tests/llvm-pass/functionrename/: CMakeLists.txt  FunctionRename.cpp
src/: CEscape_TD.c  CEscape_TD.h  boilerplate.c  boilerplate.h  concrete.c  final.bc  libc.a.bc  libc_l.a.bc  libc_r.a.bc  symbolic.c  td.bc  td.c  td1.c  td2.c  td3.c  td4.c  utils.c
tests/: check4.c  td.c  td1.c  td2.c  td3.c  td4.c  td5.c  td6.c
